# filex

./: .gitignore  HOW_WE_BUILT_IT.md  README.md  package-lock.json
backend/: CODING_GUIDELINES.md  EMBEDDING_AND_SEARCH_SYSTEM.md  README.md  WEB_API.md  example_file_processor.py  example_logging.py  example_repository.py  example_usage.py  filex-web.py  filex.py  pyproject.toml  registered_folders.json  requirements.txt
backend/CC/.filex/index/: index.db
backend/src/: __init__.py  chunkers.py  embedders.py  file_extractors.py  file_handlers.py  file_metadata.py  file_processor.py  image_embedders.py  image_handlers.py  index_manager.py  interfaces.py  logger.py  repo_manager.py  repository.py  search_manager.py  web_app.py
backend/src/embedding/: __init__.py  embedders.py  file_extractors.py  handler.py  interfaces.py
backend/src/filex/embedding/: __init__.py  file_processor.py  handler.py  logger.py  repo_manager.py  repository.py  search_manager.py  storage_manager.py
frontend/: API_INTEGRATION.md  README.md  index.html  package-lock.json
frontend/src/app/: App.tsx
frontend/src/app/components/: DirectorySizes.tsx  FileTypeDistribution.tsx  IndexingActivity.tsx  IndexingProgress.tsx  StorageOverview.tsx  ThemeToggle.tsx
frontend/src/app/hooks/: useDirectoryData.ts
practice/: README.md  sample1.txt  sample2.txt  sample3.txt  test_query_examples.txt
practice/.filex/index/: image_search_index.npy  image_search_metadata.json  index.db  search_index.npy  search_metadata.json
practice/data/: info.txt  stats.txt
practice/documents/: notes.txt  readme.txt
(+1 files in other folders)
