[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filex-backend"
version = "0.1.0"
description = "File indexing and semantic search backend"
requires-python = ">=3.9"
dependencies = [
    "python-docx>=1.1.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false